--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="kk">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Жетіген</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f9fafb;
+      margin: 0;
+      padding: 30px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #222;
+      margin-bottom: 10px;
+    }
+
+    p {
+      max-width: 650px;
+      margin: 0 auto 20px;
+      color: #444;
+      line-height: 1.6;
+      font-size: 18px;
+    }
+
+    img {
+      width: 80%;
+      max-width: 400px;
+      border-radius: 12px;
+      margin-top: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    button {
+      background: #e75480;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #d6336c;
+    }
+
+    .pink-bullets {
+      list-style: none;
+      padding: 0;
+      max-width: 720px;
+      margin: 20px auto;
+      text-align: left;
+    }
+    .pink-bullets li {
+      position: relative;
+      padding-left: 36px;
+      margin: 12px 0;
+      line-height: 1.5;
+      color: #333;
+      background: #fff;
+      border-radius: 10px;
+      padding: 12px 16px 12px 36px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.04);
+    }
+    .pink-bullets li::before {
+      content: "";
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #ff66b3;
+      box-shadow: 0 0 0 4px rgba(255,102,179,0.12);
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Жетіген</h1>
+
+  <p>
+    <strong>Жетіген</strong> — қазақтың ежелгі әрі ерекше ұлттық музыкалық аспаптарының бірі. 
+    Бұл аспап ішекті-шумақты аспаптар тобына жатады және өзінің жұмсақ әрі сырлы әуенімен халықтың рухани әлемін байытқан.
+  </p>
+
+  <h2>Жетігеннің құрылымы</h2>
+  <ul class="pink-bullets">
+    <li><strong>Пішіні:</strong> Жетіген – ұзынша, қорап тәрізді тегіс ағаштан жасалған аспап. Оның көлемі шағын, жеңіл әрі ықшам.</li>
+    <li><strong>Ішектері:</strong> Жетігенде әдетте жеті ішек болады. Әр ішекке арнайы тиек (күсті) қойылады. Ішектер малдың ішегінен немесе заманауи материалдардан дайындалады.</li>
+    <li><strong>Тиектері:</strong> Аспаптың ішектерінің дыбысын реттейтін кішкентай ағаш бөлшектер. Тиектерді жылжыту арқылы дыбысты өзгертуге болады.</li>
+    <li><strong>Материалы:</strong> Жетіген табиғи материалдардан, негізінен ағаштан жасалады, бұл оның дыбысын ерекше әрі табиғи етеді.</li>
+  </ul>
+
+  <!-- Фото -->
+  <img src="zhetygen.webp" alt="Жетіген суреті">
+
+  <!-- ҮНІ батырмасы -->
+  <div>
+    <button id="playButton" onclick="toggleJetigen()">▶ ҮНІ</button>
+  </div>
+
+  <!-- Аудио -->
+  <audio id="jetigenSound" src="jetigen (mp3cut.net).mp3"></audio>
+
+  <script>
+    const sound = document.getElementById('jetigenSound');
+    const button = document.getElementById('playButton');
+
+    function toggleJetigen() {
+      if (sound.paused) {
+        sound.play();
+        button.textContent = '⏸ Пауза';
+      } else {
+        sound.pause();
+        button.textContent = '▶ ҮНІ';
+      }
+    }
+
+    sound.addEventListener('ended', () => {
+      button.textContent = '▶ ҮНІ';
+    });
+  </script>
+
+</body>
+</html>
 
