--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </ul>
 
   <!-- Фото -->
-  <img src="zhetygen.webp" alt="Жетіген суреті">
+  <img src="zhetygen.jpg" alt="Жетіген суреті">
 
   <!-- ҮНІ батырмасы -->
   <div>
